# BookWisePy

./: .gitignore  README.md  pyproject.toml
bookwisepy/: app.py
