[tool.poetry]
name = "bookwisepy"
version = "0.1.0"
description = ""
authors = ["Fabio <21972160+hipnologo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
